--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "contact-list",
   "version": "0.1.0",
+  "homepage": "http://wgranger.github.io/contact-list",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +17,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
